# project-downsize

./: .gitignore  Cargo.toml  README.md
assets/models/: cube.mtl
assets/shaders/: static_frag.glsl  static_vert.glsl
assets/shaders/models/: static_model_frag.glsl  static_model_vert.glsl
assets/shaders/quad_render/: quad_shader_frag.glsl  quad_shader_grayscale_frag.glsl  quad_shader_vert.glsl
src/: kristoff_main.rs  main.rs  main_kristoff.rs  render.rs  util.rs
src/render/: buffer.rs  debug.rs  downsize.rs  drawable.rs  frame.rs  generic.rs  lighting.rs  model.rs  render_context.rs  shader.rs  test.rs  texture.rs  transform.rs
src/util/: bitflag.rs  input.rs  math.rs  variable.rs
