[package]
name = "project-downsize"
version = "0.0.1"
edition = "2021"
authors = ["Brooks Palin", "Kristoff Finnly"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.2"
image = "0.24.0"
serde = "1.0.133"
glutin = "0.28.0"
cgmath = "0.18.0"
egui = "0.16.1"
egui_glow = "0.16.0"
obj = "0.10.2"
png = "0.17.3"
transform-matrix = "0.1.1"